# yarge

./: .gitattributes  .gitignore  Cargo.toml  README.md  README_TEMPLATE.md  TODO.md  flake.nix  readme-gen.mjs  readme.mjs  setup.sh
.assets/: product.pdn
.github/workflows/: build.yml  readme.yml  rust.yml
benches/: bench.rs
icon/: taskbar.rgba
lib/framework/: Cargo.toml
lib/framework/src/: lib.rs
lib/rustish-core/: Cargo.toml
lib/rustish-core/src/: api.rs  consts.rs  cpu.rs  lib.rs  mmu.rs  ppu.rs
lib/rustish-core/src/cpu/: reg.rs
lib/rustish-core/src/cpu/reg/: union.rs
lib/rustish-core/src/mmu/: bios.rs  cartridge.rs
lib/rustish-core/src/ppu/: fetcher.rs  oam.rs  ppu_registers.rs
lib/rustish_core/: Cargo.toml
lib/rustish_core/src/: consts.rs  cpu.rs  lib.rs  mmu.rs  ppu.rs
lib/rustish_core/src/cpu/: instructions.rs
lib/rustish_core/src/mmu/: bios.rs
lib/rustish_core/src/ppu/: bg_fetcher.rs  fetcher.rs  oam.rs  ppu_registers.rs
lib/yarge-core/: Cargo.toml
lib/yarge-core/src/: api.rs  consts.rs  cpu.rs  errors.rs  input.rs  lib.rs  mmu.rs  ppu.rs  timers.rs
lib/yarge-core/src/cpu/: instructions.rs  reg.rs
lib/yarge-core/src/cpu/instructions/: macros.rs  macros_cb.rs
lib/yarge-core/src/cpu/reg/: union.rs
lib/yarge-core/src/mmu/: cartridge.rs
lib/yarge-core/src/mmu/cartridge/: common.rs  header.rs  types.rs
lib/yarge-core/src/mmu/cartridge/types/: mbc1.rs  mbc3.rs  mock.rs  none.rs
lib/yarge-core/src/ppu/: fetcher.rs  fifo.rs  oam.rs  ppu_registers.rs
lib/yarge-core/src/ppu/fifo/: background.rs  sprite.rs
lib/yarge-gui-framework/: Cargo.toml
lib/yarge-gui-framework/src/: lib.rs
roms/mooneye/emulator-only/mbc1/: bits_mode.sav
roms/mooneye/utils/: bootrom_dumper.sav
src/: gui.rs  main.rs
src/gb/: cpu.rs  mmu.rs  mod.rs  ppu.rs
src/gb/cpu/: instructions.rs  reg.rs
src/gb/cpu/reg/: union.rs  union_safe.rs
src/gb/mmu/: bios.rs  cartridge.rs
src/gui/: error_words.rs  framework.rs  icons.rs  mod.rs
yarge-core/: Cargo.toml  README.md
yarge-core/src/: api.rs  apu.rs  bus.rs  consts.rs  cpu.rs  errors.rs  event.rs  input.rs  lib.rs  mmu.rs  ppu.rs  serial.rs  tests.rs  timers.rs
yarge-core/src/apu/: audio_buffer.rs  audio_device.rs  channels.rs  common.rs  envelope.rs  frame_sequencer.rs  terminal.rs  traits.rs  wave.rs
yarge-core/src/apu/channels/: noise.rs  square.rs
yarge-core/src/apu/channels/square/: wave.rs
yarge-core/src/apu/common/: envelope.rs  length.rs
yarge-core/src/bus/: cartridge.rs
yarge-core/src/bus/cartridge/types/: mbc3.rs
yarge-core/src/cpu/: instructions.rs  reg.rs
yarge-core/src/cpu/instructions/: macros.rs  macros_cb.rs
yarge-core/src/cpu/reg/: union.rs
yarge-core/src/mmu/: cartridge.rs
yarge-core/src/mmu/cartridge/: header.rs  helpers.rs  types.rs
yarge-core/src/mmu/cartridge/types/: mbc1.rs  mbc3.rs  none.rs
yarge-core/src/ppu/: fifo.rs  oam.rs  ppu_registers.rs  util.rs
yarge-core/src/ppu/fifo/: background.rs  sprite.rs
yarge-core/src/tests/: mod.rs
yarge-frontend-desktop/: Cargo.toml
yarge-frontend-desktop/icon/: window.rgba
yarge-frontend-desktop/lib/yarge-gui-framework/: Cargo.toml
yarge-frontend-desktop/lib/yarge-gui-framework/src/: lib.rs
yarge-frontend-desktop/src/: main.rs
yarge-frontend-desktop/src/gui/: audio.rs  error_words.rs  icons.rs  mod.rs  u16edit.rs
yarge-frontend-nano/: Cargo.toml
yarge-frontend-nano/src/: main.rs
yarge-frontend-sdl/: Cargo.toml  build.rs  font.rgba  yarge-frontend-sdl.desktop  yoshi.rgb
yarge-frontend-sdl/src/: anim.rs  audio.rs  config.rs  data_dir.rs  main.rs  menu.rs  saves.rs  text.rs  utils.rs
yarge-frontend-sdl/src/menu/: anim.rs
yarge-ppu-evt-viewer/: index.css  index.html  index.js
yarge-rom-tests/: .todo  Cargo.toml
yarge-testbench/: Cargo.toml
yarge-testbench/src/: lib.rs
