[package]
name = "yarge"
authors = ["griffi-gh <prasol258@gmail.com>"]
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.60"

[profile.release]
codegen-units = 1

[dependencies]
yarge-core = { path = "lib/yarge-core" }
yarge-gui-framework = { path = "lib/yarge-gui-framework", optional = true }
ahash = { version = "0.7.6", optional = true }
rfd = { version = "0.8.1", optional = true }
clap = { version = "3.1", features = ["derive"] }
build-time = "0.1.1"

[features]
default = ["gui", "breakpoints"]
gui = ["yarge-gui-framework", "rfd", "ahash"]
ly-stub = ["yarge-core/ly-stub"]
logging-file = ["yarge-core/logging-file"]
logging-stdout = ["yarge-core/logging-stdout"]
logging-file-ly = ["logging-file", "ly-stub"]
breakpoints = ["yarge-core/breakpoints"]

#[dev-dependencies]
#bencher = "0.1.5"
#[[bench]]
#name = "bench"
#harness = false
