[workspace]
members = [
  "yarge-core",
  "yarge-frontend-desktop",
  "yarge-frontend-sdl",
  "yarge-testbench"
]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.yarge-core]
opt-level = 1

[profile.production]
inherits = "release"
strip = true
codegen-units = 1
lto = true
panic = "abort"

[profile.dev-but-gotta-go-fast]
inherits = "dev"
opt-level = 3
