[package]
name = "yarge-core"
description = "Gameboy emulator"
authors = ["griffi-gh <prasol258@gmail.com>"]
license = "LGPL-3.0"
version = "0.0.1"
edition = "2021"
rust-version = "1.64"

[dependencies]
paste = "1.0"
arrayvec = "0.7"
arraydeque = "0.4"
lazy_static = "1.4"
thiserror = "1.0"
enum_dispatch = "0.3"
enumflags2 = "0.7"
parse-display-derive = "0.6"

[features]
default = []
ly-stub = []
logging = []
logging-file = ["logging"]
logging-stdout = ["logging"]
breakpoints = []
