[package]
name = "yarge-core"
description = "Gameboy emulator"
authors = ["griffi-gh <prasol258@gmail.com>"]
license = "LGPL-3.0"
readme = "../README.md"
version = "0.0.1"
edition = "2021"
rust-version = "1.64"

[dependencies]
paste = "1.0"
arrayvec = "0.7"
arraydeque = "0.4"
lazy_static = "1.4"
thiserror = "1.0"
enum_dispatch = "0.3"
enumflags2 = "0.7"
parse-display = "0.6"
crunchy = "0.2"
bit_reverse = "0.1"
# TODO enumflags2 is only used in input.rs, consider removing it

[dev-dependencies]
fxhash = "0.2"

[features]
default = []
dbg-ly-stub = []
dbg-logging = []
dbg-logging-file = ["dbg-logging"]
dbg-logging-stdout = ["dbg-logging"]
dbg-emit-ppu-events = []
dbg-breakpoints = []
dbg-breakpoint-on-ld-b-b = ["dbg-breakpoints"]
