[package]
name = "yarge-frontend-desktop"
authors = ["griffi-gh <prasol258@gmail.com>"]
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.64"

[dependencies]
yarge-core = { path = "../yarge-core" }
yarge-gui-framework = { path = "./lib/yarge-gui-framework", optional = true }
fxhash = { version = "0.2", optional = true }
rfd = { version = "0.10", optional = true }
clap = { version = "3.1", features = ["derive"] }
build-time = "0.1.1"
cpal = "0.14"

[features]
default = ["gui", "dbg-breakpoints"]
gui = ["dep:yarge-gui-framework", "dep:rfd", "dep:fxhash"]
# Pass through to yarge-core
dbg-ly-stub = ["yarge-core/dbg-ly-stub"]
dbg-logging-file = ["yarge-core/dbg-logging-file"]
dbg-logging-stdout = ["yarge-core/dbg-logging-stdout"]
dbg-breakpoints = ["yarge-core/dbg-breakpoints"]
dbg-breakpoint-on-ld-b-b = ["yarge-core/dbg-breakpoint-on-ld-b-b"]
dbg-emit-ppu-events = ["yarge-core/dbg-emit-ppu-events"]
