[package]
name = "yarge-frontend-nano"
authors = ["griffi-gh <prasol258@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
yarge-core = { path = "../yarge-core" }
minifb = { version = "0.23", default-features = false }

[features]
default = ["x11"]
x11 = ["minifb/x11"]
wayland = ["minifb/dlopen", "minifb/wayland"]
