[package]
name = "yarge-frontend-sdl"
authors = ["griffi-gh <prasol258@gmail.com>"]
version = "0.1.0"
rust-version = "1.65"
edition = "2021"
publish = false

[dependencies]
yarge-core = { path = "../yarge-core" }
clap = { version = "4.0", features = ["derive"] }
sdl2 = { version = "0.35", features = ["bundled", "static-link"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
anyhow = "1.0"
dirs = { version = "4.0", optional = true }

[features]
default = ["global_config"]
production = []
global_config = ["dep:dirs"]