[package]
name = "yarge-frontend-sdl"
description = "An open source Gameboy emulator"
authors = ["griffi-gh <prasol258@gmail.com>"]
license = "LGPL-3.0"
version = "0.1.0"
rust-version = "1.65"
edition = "2021"
publish = false

[dependencies]
yarge-core = { path = "../yarge-core" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
anyhow = "1.0"
dirs = { version = "5.0", optional = true }
dark-light = { version = "1.0", optional = true }
zip = { version = "2.2", default-features = false, features = ["deflate"], optional = true }

[target.'cfg(not(windows))'.dependencies]
sdl2 = { version = "0.37", features = ["use-pkgconfig"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", optional = true }
sdl2 = { version = "0.37", features = ["bundled", "static-link"] }

[target.'cfg(windows)'.build-dependencies]
winres = { version = "0.1", optional = true }

[features]
default = ["global_config", "hidpi", "system-theme", "archive"]
production = ["windows-icon"]
global_config = ["dep:dirs"]
hidpi = ["dep:windows", "windows/Win32_UI_HiDpi"]
system-theme = ["dep:dark-light"]
windows-icon = ["dep:winres"]
archive = ["dep:zip"]

[package.metadata.deb]
maintainer = "griffi-gh <prasol258@gmail.com>"
copyright = "2022-2023, griffi-gh <prasol258@gmail.com>"
extended-description = "An open source Gameboy emulator (SDL frontend)"
depends = "$auto"
assets = [
  ["target/release/yarge-frontend-sdl", "/usr/bin/yarge-frontend-sdl", "755"],
  ["yarge-frontend-sdl.desktop", "/usr/share/applications/yarge-frontend-sdl.desktop", "755"],
  ["yarge.png", "/usr/share/icons/yarge-frontend-sdl/yarge-icon.png", "644"],
]
