[package]
name = "rustish-core"
authors = ["griffi-gh <prasol258@gmail.com>"]
version = "0.0.0"
publish = false
edition = "2021"

[profile.release]
codegen-units = 1

[dependencies]
paste = "1.0"
arraydeque = "0.4.5"
lazy_static = "1.4.0"

[features]
default = []
ly-stub = []
logging = []
logging-file = ["logging"]
logging-stdout = ["logging"]
logging-all = ["logging-file", "logging-stdout"]
