[package]
name = "rustish_core"
authors = ["griffi-gh <prasol258@gmail.com>"]
version = "0.0.0"
publish = false
edition = "2021"

[profile.release]
codegen-units = 1

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
paste = "1.0"
arraydeque = "0.4.5"

[features]
default = []
ly-stub = []
logging = []
logging-file = ["logging"]
logging-stdout = ["logging"]
logging-all = ["logging-file", "logging-stdout"]
