[package]
name = "yarge-core"
authors = ["griffi-gh <prasol258@gmail.com>"]
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.60"

[profile.release]
codegen-units = 1

[dependencies]
paste = "1.0"
arrayvec = "0.7"
arraydeque = "0.4"
lazy_static = "1.4"
thiserror = "1.0"
enum_dispatch = "0.3"
parse-display-derive = "0.5"

[features]
default = []
ly-stub = []
logging = []
logging-file = ["logging"]
logging-stdout = ["logging"]
breakpoints = []
