[package]
name = "yarge-gui-framework"
authors = ["griffi-gh <prasol258@gmail.com>"]
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.60"

[dependencies]
egui = "0.19"
egui-wgpu = "0.19"
egui-winit = "0.19"
winit = "0.27"
winit_input_helper = "0.13"
pixels = { git = "https://github.com/parasyte/pixels", rev = "9f7896cd2f1c80989e8f29ec6e3b6687183250a4"}
